testdata/baselines/reference/submodule/compiler/jsNoImplicitAnyNoCascadingReferenceErrors.errors.txt
index.js(3,21): error TS2314: Generic type 'Foo<T>' requires 1 type argument(s).
index.js(6,14): error TS2339: Property 'prop' does not exist on type 'MyFoo'.


==== somelib.d.ts (0 errors) ====
    export declare class Foo<T> {
        prop: T;
    }
==== index.js (2 errors) ====
    import {Foo} from "./somelib";
    
    class MyFoo extends Foo {
                        ~~~
!!! error TS2314: Generic type 'Foo<T>' requires 1 type argument(s).
        constructor() {
            super();
            this.prop.alpha = 12;
                 ~~~~
!!! error TS2339: Property 'prop' does not exist on type 'MyFoo'.
        }
    }
    